--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
 		<div id="my_dataviz"></div>
 	</div>
 
+	<div>
+		<svg easypz id="dna_align"></svg>
+	</div>
+
 	<!-- JavaScript For Bootstrap 4 -->
 	<script src="client/jquery.slim.min.js"></script>
 	<script src="client/popper.min.js"></script>
@@ -51,10 +55,11 @@
 	<!-- D3 JS -->
 	<script src="client/d3.min.js"></script>
 
-	<!-- Project JS -->
-	<script type="application/javascript" src="alignment.js">
+	<script src="https://code.easypz.io/easypz.latest.min.js"></script>
 
-	</script>
+	<!-- Project JS -->
+	<script type="application/javascript" src="dna_align.js"></script>
+	<script type="application/javascript" src="alignment.js"></script>
 </body>
 
 </html>
