checkboxes now collapsable

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 			</ul>
 		</div>
 	</nav>
-	<div id = "tree" style="overflow: auto; max-height: 600px; float:right; max-width:fit-content;">	
+	<div id = "tree" style="overflow: auto; max-height: 600px; float:right; width:250px;">	
 	</div>
 	<div class="container">
 		<h2>Visualizing DNA Sequences</h2>
@@ -48,8 +48,6 @@
 
 		
 	</div>
-
-	<div id="tree"/>
 	<!-- JavaScript For Bootstrap 4 -->
 	<script src="client/jquery.min.js"></script>
 	<script src="client/popper.min.js"></script>
