using MSAViewer instead of custom tool

--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,13 @@
 			sequences across different species.
 		</p>
 
-		<div id="my_dataviz"></div>
+		<!-- <div id="my_dataviz"></div> -->
 	</div>
 
-	<div>
-		<svg easypz id="dna_align"></svg>
+	<!-- <div id="dna_align"> -->
 	</div>
+
+	<div id="msa"></div>
 
 	<!-- JavaScript For Bootstrap 4 -->
 	<script src="client/jquery.slim.min.js"></script>
@@ -55,11 +56,12 @@
 	<!-- D3 JS -->
 	<script src="client/d3.min.js"></script>
 
-	<script src="https://code.easypz.io/easypz.latest.min.js"></script>
+	<script src="client/msa.min.gz.js"></script>
 
 	<!-- Project JS -->
 	<script type="application/javascript" src="dna_align.js"></script>
 	<script type="application/javascript" src="alignment.js"></script>
+	<script type="application/javascript" src="index.js"></script>
 </body>
 
 </html>
