--- a/public/index.html
+++ b/public/index.html
@@ -40,13 +40,9 @@
 			sequences across different species.
 		</p>
 
-		<!-- <div id="my_dataviz"></div> -->
-	</div>
+		<div id="msa"></div>
 
-	<!-- <div id="dna_align"> -->
 	</div>
-
-	<div id="msa"></div>
 
 	<!-- JavaScript For Bootstrap 4 -->
 	<script src="client/jquery.slim.min.js"></script>
@@ -56,12 +52,12 @@
 	<!-- D3 JS -->
 	<script src="client/d3.min.js"></script>
 
+	<!-- MSAViewer JS -->
 	<script src="client/msa.min.gz.js"></script>
 
 	<!-- Project JS -->
-	<script type="application/javascript" src="dna_align.js"></script>
-	<script type="application/javascript" src="alignment.js"></script>
-	<script type="application/javascript" src="index.js"></script>
+	<script type="application/javascript" src="client/util.js"></script>
+	<script type="application/javascript" src="client/alignment.js"></script>
 </body>
 
 </html>
