commented credit into index.html

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,12 @@
 
 	</div>
 
+	<!-- <div>
+		<p>
+			Guy Yachdav and Sebastian Wilzbach and Benedikt Rauscher and Robert Sheridan and Ian Sillitoe and James Procter and Suzanna Lewis and Burkhard Rost and Tatyana Goldberg. "MSAViewer: interactive JavaScript visualization of multiple sequence alignments." Bioinformatics (2016)
+		</p>
+	</div> -->
+
 	<!-- JavaScript For Bootstrap 4 -->
 	<script src="client/jquery.slim.min.js"></script>
 	<script src="client/popper.min.js"></script>
