--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 			</ul>
 		</div>
 	</nav>
-	<div id = "tree" style="overflow: auto; max-height: 600px; float:right; width:250px;">	
+	<div id = "tree" style="overflow: auto; max-height: 600px; float:right; width:250px;">
 	</div>
 	<div class="container">
 		<h2>Visualizing DNA Sequences</h2>
@@ -46,7 +46,8 @@
 			sequences across different species.
 		</p>
 
-		
+		<div id="line-graph"></div>
+
 	</div>
 	<!-- JavaScript For Bootstrap 4 -->
 	<script src="client/jquery.min.js"></script>
