--- a/public/index.html
+++ b/public/index.html
@@ -36,17 +36,46 @@
 			</ul>
 		</div>
 	</nav>
-	<div id = "tree" style="overflow: auto; max-height: 600px; float:right; width:250px;">	
+	<div class="modal fade" id="filter-modal" tabindex="-1" role="dialog" aria-labelledby="filter-modal-title"
+		aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="filter-modal-title">Choose Displayed DNA Sequences</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div id="tree" style="overflow: auto; max-height: 600px; ">
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div class="container">
-		<h2>Visualizing DNA Sequences</h2>
-		<br>
-		<p>
-			This visualization was created as an aid to detect errors in DNA sequences, as well as compare DNA
-			sequences across different species.
-		</p>
-
-		<div id="msa"></div>
+		<div class="col">
+			<div class="row">	
+				<h2>Visualizing DNA Sequences</h2>
+				<br>
+				<p>
+					This visualization was created as an aid to detect errors in DNA sequences, as well as compare DNA
+					sequences across different species.
+				</p>
+			</div>
+			<div class="row">
+				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#filter-modal">
+					Filter DNA Sequences
+				</button>
+				<div id="msa"></div>
+			</div>
+		</div>
+	</div>
+	<div id="testingdiv" class="container">
+		<div id="testcol" class="col-2"></div>
 	</div>
 
 	<!-- JavaScript For Bootstrap 4 -->
