--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,8 @@
 					<div id="tree" style="overflow: auto; max-height: 600px; ">
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-secondary" data-dismiss="modal"
+							id="filter-button">Update</button>
 					</div>
 				</div>
 			</div>
@@ -58,7 +59,7 @@
 	</div>
 	<div class="container">
 		<div class="col">
-			<div class="row">	
+			<div class="row">
 				<h2>Visualizing DNA Sequences</h2>
 				<br>
 				<p>
@@ -71,7 +72,7 @@
 					Filter DNA Sequences
 				</button>
 				<div id="msa"></div>
-				<div id="line-graph"></div>
+				<!-- <div id="line-graph"></div> -->
 			</div>
 		</div>
 	</div>
