--- a/public/index.html
+++ b/public/index.html
@@ -94,8 +94,8 @@
 				<button type="button" class="btn btn-primary ml-2" data-toggle="modal" data-target="#overview-modal">
 					Show Overview
 				</button>
-				<div id="msa"></div>
-				<!-- <div id="line-graph"></div> -->
+				<div id="msa" class="pt-3"></div>
+				<div id="line-graph"></div>
 			</div>
 		</div>
 	</div>
@@ -123,14 +123,6 @@
 	<script type="application/javascript" src="client/util.js"></script>
 	<script type="application/javascript" src="client/alignment.js"></script>
 
-	<script>
-
-		function detachOverview() {
-			let a = $('.biojs_msa_overviewbox').detach();
-			a.appendTo('#overview-content');
-		} 
-		detachOverview();
-	</script>
 </body>
 
 </html>
