Added x-axis label and chart title

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
 	<!-- Bootstrap 4 CSS -->
 	<link rel="stylesheet" type="text/css" href="client/bootstrap.min.css" />
 
-
-
 	<!-- Project CSS -->
 	<link rel="stylesheet" type="text/css" href="client/style.css" />
+
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Open+Sans&display=swap" rel="stylesheet">
 
 	<link id="stm" type="text" href="treeview/sequences_tax_mapping.txt" />
 
