--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,11 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 		<div class="container">
-			<a class="navbar-brand" href="/">Team TBD</a>
+			<a class="navbar-brand" href="/">DNA Visualization</a>
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
 					<a class="nav-link active" href="/">
-						DNA Visualization
+						Visualization
 					</a>
 				</li>
 				<li class="nav-item">
@@ -84,8 +84,12 @@
 				<h2>Visualizing DNA Sequences</h2>
 				<br>
 				<p>
-					This visualization was created as an aid to detect errors in DNA sequences, as well as compare DNA
-					sequences across different species.
+					This visualization was created as a visual aid to detect errors in DNA sequences by comparing them against
+					known sequences and computing a score. This score represents how similar they are to known sequences.
+					The higher the score, the more similar they are to known sequences and therefore less likely to be erroneous.
+				</p>
+				<p>
+					Click on "Filter DNA Sequences" and select sequences you would like to see to get started.
 				</p>
 			</div>
 			<div class="row">
